--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="number" id="feet" placeholder=" Enter Feet Here" />
-    <button onclick="convert()" id="convert">Convert</button>
-    <span id="inches"></span>
+    <div class="container">
+      <input type="number" id="feet" placeholder=" Enter Feet Here" />
+      <button onclick="convert()" id="convert">Convert</button>
+      <span id="inches"></span>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
